--- a/WebContent/community/notice/list.css
+++ b/WebContent/community/notice/list.css
@@ -1,20 +1,22 @@
 /* font-size: 기본 14, 작은 12, 큰 16, 제일큰 24 */
-/* color: hover #eff0f1, border #e4e6e8 */
 :root {
     --shadow: 0 1px 2px rgba(0,0,0,0.05),0 1px 4px rgba(0,0,0,0.05),0 2px 8px rgba(0,0,0,0.05);
     /*---------------------------------------*/
-    --font-color-basic: #464646 !important;
-    --font-color-light: #E2E2E2 !important;
-    --font-color-strong: #FD9F28 !important;
+    --text-color-basic: #464646 !important;
+    --text-color-light: #E2E2E2 !important;
+    --text-color-strong: #FD9F28 !important;
     --bg-color-light: #FFFEFD !important;
+    --hover-color-bg: #EFF0F1;
+    --border-color-light: #E4E6E8;
 }
 
 html, body {
     height: 100%;
 }
 a {
-    color: var(--font-color-basic);
+    color: var(--text-color-basic);
     text-decoration: initial;
+    cursor: pointer;
 }
 ul, ol {
     list-style: none;
@@ -26,7 +28,7 @@ html, body, h1, ul, ol, th, td, fieldset, input {
 body {
     font-family: "맑은고딕";
     font-size: 14px;
-    color: var(--font-color-basic);
+    color: var(--text-color-basic);
     background-color: #FFFFFF;
 }
 input, textarea {
@@ -34,6 +36,9 @@ input, textarea {
 }
 button, select {
     font-size: 12px !important;
+}
+textarea {
+    font-size: 14px !important;
 }
 
 /*---------------------------------------*/
@@ -46,16 +51,21 @@ button, select {
 
 .button-2, .button-5 {
     cursor: pointer;
-    border: 1px solid var(--font-color-basic);
+    border: 1px solid var(--text-color-basic);
     border-radius: 3px;
     background-color: white;
     padding: 0;
+    height: 20px;
+    font-weight: 400;
 }
 .button-2 {
     width: 35px;
 }
 .button-5 {
     width: 65px;
+}
+button:hover {
+    font-weight: bold;
 }
 
 /*---------------------------------------*/
@@ -75,8 +85,8 @@ button, select {
 .table th,
 .table td {
     font-weight: 400;
-    border-top: 1px solid var(--font-color-light);
-    border-bottom: 1px solid var(--font-color-light);
+    border-top: 1px solid var(--border-color-light);
+    border-bottom: 1px solid var(--border-color-light);
 }
 .table th {
     background: var(--bg-color-light);
@@ -91,7 +101,7 @@ button, select {
     line-height: 40px;
 }
 .table>tbody>tr:hover {
-    background-color: #eff0f1;
+    background-color: var(--hover-color-bg);
 }
 
 /*---------------------------------------*/
@@ -151,7 +161,7 @@ button, select {
         }
         #aside {
             grid-area: aside;
-            border-right: solid #e4e6e8 1px;
+            border-right: solid var(--border-color-light) 1px;
             font-size: 16px; 
         }
         #main {  
@@ -209,7 +219,7 @@ button, select {
         padding: 0px 16px;
     }
     .main-menu>ul>li>a:hover {
-        background-color: #eff0f1;
+        background-color: var(--hover-color-bg);
         color: black;
         border-radius: 15px;
     }
@@ -245,7 +255,7 @@ button, select {
     padding-left: 4px;
 }
 .current-page, .aside-menu a:hover {
-    background-color: #eff0f1;
+    background-color: var(--hover-color-bg);
     border-right: 5px orange solid;
     border-radius: 3px;
 }
@@ -280,71 +290,93 @@ button, select {
 }
 
 /*---------------------------------------*/
+/*---------------------------------------*/
 
 #main {
     display: grid;
-    grid-template-rows: 60px 30px 1fr 60px 30px;
+    grid-template-rows: 50px 1fr 40px 50px;
     grid-template-columns: 1fr;
-    gap: 10px;
+    gap: 15px;
     grid-template-areas:
-    "title"
-    "info"
-    "article"
+    "head-select"
+    "notice-table"
     "pager"
-    "button";
+    "form";
 }
     #main>h1 {
-        grid-area: title;
-        
-        line-height: 60px;
+        grid-area: head-select;
+
         font-size: 24px;
-        text-align: center;
-        border-bottom: 1.5px solid var(--font-color-basic);
+        color: var(--text-color-basic);
+        line-height: 50px;
+        background: url(../../images/icon-notice.png) no-repeat 0 center;
+        background-size: 30px;
+        padding-left: 40px;
     }
-    .notice-info {
-        grid-area: info;
+    #main>.select-box {
+        grid-area: head-select;
 
-        font-size: 12px;
+        justify-self: end;
+        align-self: end;
     }
-    .notice-article {
-        grid-area: article;
-
-        background-color: var(--bg-color-light);
-        padding: 15px;
+    .notice-table {
+        grid-area: notice-table;
     }
-    .article-pager {
+    .notice-table-pager {
         grid-area: pager;
 
-        display: grid;
-        grid-template-rows: 30px 30px;
-        grid-template-columns: 1fr;
-        grid-template-areas:
-        "up-pager"
-        "down-pager";
-
-        line-height: 30px;
-        font-size: 12px;
+        display: flex;
+        justify-self: center;
+        align-self: center;
+        align-items: center;
+        font-size: 14px;
     }
-        .up-article-pager {
-            grid-area: up-pager;            
-        }
-        .down-article-pager {
-            grid-area: down-pager;
-            border-top: 1px solid #E2E2E2;
-        }
-    .article-pager-button {
-        grid-area: button;
+    .create-btn {
+    	grid-area: form;
+    	
+    	align-self: center;
+    }
+    .notice-search-form {
+        grid-area: form;
+
+        justify-self: center;
+        align-self: center;
     }
 
-.notice-info ul {
+.notice-table-pager a {
+    height: 15px;
+}
+.notice-table-pager img {
+    width: 15px;
+    height: 15px;
+    padding: 0 5px 0 5px;
+}
+.notice-table-pager>ul {
     display: flex;
-    justify-content: space-around;
-    line-height: 30px;
 }
-.article-pager>div>div {
-    display: inline-block;
-    padding-left: 20px
+.notice-table-pager li {
+    padding: 0 5px 0 5px;
 }
-.article-pager-button button:last-child {
-    float: right;
+.notice-table-pager .current-pager {
+    font-weight: bold;
+}
+
+.notice-search-form fieldset {
+    display: flex;
+    border: 0;
+    height: 25px;
+}
+.notice-search-form #select-notice-search {
+    margin-right: 5px;
+}
+.notice-search-form input[type=text] {
+    width: 200px;
+}
+.notice-search-form input[type=submit] {
+	cursor: pointer;
+    margin-left: 5px;
+    width: 25px;
+    border: 0;
+    background: url(../../images/search.png) no-repeat center;
+    background-size: 22px;
 }
