--- a/WebContent/pet-management/schedule/calendar.css
+++ b/WebContent/pet-management/schedule/calendar.css
@@ -4,7 +4,7 @@ html{
 }
 body{
     height: 100%;
-    font-family: "ë§‘ì€ ê³ ë”•","ê³ ë”•",'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "¸¼Àº °íµñ","°íµñ", sans-serif;
     margin: 0;
 }
 h1,ul,ol{
@@ -26,6 +26,11 @@ ul,ol{
 }
 .align-center{
     align-items: center;
+}
+.btn{
+    display: inline-block; /*1. display ¼³Á¤¹Ù²Ù°í*/
+    text-indent: -999px; /*2. ÅØ½ºÆ® ¿ÞÂÊÀ¸·Î ¹Ð¾î³¿ */
+    overflow: hidden;/*3. ³ÑÄ£ ÅØ½ºÆ® ¾Èº¸ÀÌµµ·Ï */
 }
 
 :root{
@@ -231,6 +236,7 @@ ul,ol{
     color: var(--black-700);
 }
 
+
 .calendar td{
     border-top: 1px solid var(--black-100);
     margin: 0;
@@ -263,7 +269,9 @@ ul,ol{
 
 .calendar{
     border-collapse: collapse;
-    
+    width: 100%; 
+    --z-index: 0; 
+   
 }
 .calendar .current-year-month{
     font-size: 35px;
@@ -295,7 +303,7 @@ ul,ol{
     height: 75px;
     padding: 3px 3px 0px 3px;
 }
-.calendar  .week>td>div{
+.calendar  .week>td>.number{
     width: 30px;
     height: 30px;
     border-radius: 15px;
@@ -320,6 +328,258 @@ ul,ol{
 .prev-month,.next-month{
     cursor: pointer;
 }
+
+.schedule{
+    width: 100px;
+    height: 20px;
+    border: none;
+    border-radius: 10px;
+    margin-left: 5px;
+    padding-left: 5px;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.schedule-detail{
+    display: grid;
+    height: 90px;
+    grid-template-columns: 60px 1fr 150px;
+    
+    padding: 4px 8px;
+    --border: solid 1px var(--black-200);
+    border-radius: 5px;
+    box-shadow: var(--shadow-hover);
+}
+
+    .schedule-detail>.detail-date-day{
+        grid-column: 1/2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+        .detail-date-day>.detail-date{
+            font-size: 35px;
+            font-weight: bold;
+        }
+    
+
+    .detail-hashtag-content {
+        grid-column: 2/3;
+        margin-left: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding-top: 3px;
+    }  
+        .detail-hashtag-content>.detail-hashtag{
+            
+            height: 22px;
+            border: none;
+            border-radius: 15px;
+            line-height: 22px;
+            font-size: 13px;
+            
+            background-color: #F5A9A9;
+            padding: 2px 8px;
+
+            display: inline;
+        }
+    .detail-buttons{
+        grid-column: 3/4;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+    .detail-buttons>.edit-btn{
+        
+        background: url(../images/icon-edit.png) no-repeat center center;
+        background-size: 25px 25px;
+        margin-right: 6px;
+        
+    }
+    .detail-buttons>.delete-btn{
+        
+        background: url(../images/icon-trash.png) no-repeat center center;
+        background-size: 25px 25px;
+        
+    }
+    .btn{
+        height: 30px;
+        width: 35px;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+    }
+
+    
+/*------------------------------------------------------*/
+.overlay {
+    position:fixed;
+    top:0px;
+    left:0px;
+    width:100vw;
+    height:100vh;
+    background:rgba(0,0,0,0.4);
+    z-index:1;
+    --display:none;
+  }
+
+.popup-wrapper{
+    position:absolute;
+    top:25%;
+    left:40%;
+    width: 510px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    --transform:translate(-50%,-50%) scale(0);
+}
+
+.popup-wrapper>.add-schedule{
+    box-shadow: rgb(0 0 0 / 9%) 0px 2px 12px 0px;
+    border-radius: 3px;
+    background-color: white;
+    width: 500px;
+    height: 390px;
+    padding: 5px;
+}
+
+.close-btn{
+    display: flex;
+    margin: 10px;
+}
+
+.close-btn>img{
+    width: 15px;
+    height: auto;
+    opacity: 0.8;
+    margin-left: auto;
+    cursor: pointer;  
+}
+
+.add-schedule-form{
+    /* width: ;
+    height: 100%; */
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.title-container>.title-input{
+    border:none;
+    border-bottom: solid 1px var(--black-350);
+    font-size: 22px;
+    height: 28px;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    width: 85%;
+}
+.date-time-container{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+    .date-time-container>.date-time-lable{
+        background: url(../images/icon-clock.png) no-repeat center center;
+        background-size: 20px 20px;
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+    }
+    .date-time-container>.date-input{
+        border: none;
+    }
+    .date-time-container>.time-input{
+        border: none;
+    }
+    .content-container>.content-input{
+        border: none;
+        background:var(--black-050);
+        border-radius: 5px;
+        resize: none;
+        width: 85%;
+    }
+
+.content-container{
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+    .content-container> .content-lable{
+        background: url(../images/icon-memo.png) no-repeat center center;
+        background-size: 20px 20px;
+        width: 20px;
+        height: 20px;
+        opacity: 0.9;  
+        margin-right: 10px;
+    }
+.hashtag-container{
+    width: 55%;
+    margin-bottom: 20px;
+    margin-left: 30px;
+}
+.hashtag-container>ul{
+    display: flex;
+    justify-content: space-between;
+}
+.hashtag{ 
+    border-radius: 10px;
+    cursor: pointer;
+    opacity: 0.4;
+    padding: 3px 5px;
+    color: var(--black-750);
+}
+.selected-hashtag{
+    opacity: 1;
+}
+.hashtag:hover{
+    opacity: 1;
+}
+.hashtag1{
+    background:#F5A9A9;
+}
+.hashtag2{
+    background: #58ACFA;
+}
+.hashtag3{
+ background: #C0CA33;   
+}
+
+.hashtag4{
+    background: #F6BF26;
+}
+
+.mailing-check{
+    font-size: 12px;
+    line-height: 12px;
+    margin-bottom: 15px;
+}
+.mailing-check>input{
+    margin: 0;
+    width: 12px;
+    height: 12px;
+}
+
+.submit{
+    display: flex;
+    justify-content: center;
+}
+    .submit>.submit-btn{
+        width: 90px;
+        height: 30px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 200ms;
+    }   
+    .submit>.submit-btn:hover{
+        background-color: var(--black-100);
+    }
 
 /*-----------------------------------------*/
 @media screen and (max-width:500px){
