--- a/WebContent/pet-management/schedule/calendar.css
+++ b/WebContent/pet-management/schedule/calendar.css
@@ -394,14 +394,14 @@ ul,ol{
     }
     .detail-buttons>.edit-btn{
         
-        background: url(../images/icon-edit.png) no-repeat center center;
+        background: url(../../images/icon-edit.png) no-repeat center center;
         background-size: 25px 25px;
         margin-right: 6px;
         
     }
     .detail-buttons>.delete-btn{
         
-        background: url(../images/icon-trash.png) no-repeat center center;
+        background: url(../../images/icon-trash.png) no-repeat center center;
         background-size: 25px 25px;
         
     }
@@ -485,7 +485,7 @@ ul,ol{
     margin-bottom: 20px;
 }
     .date-time-container>.date-time-lable{
-        background: url(../images/icon-clock.png) no-repeat center center;
+        background: url(../../images/icon-clock.png) no-repeat center center;
         background-size: 20px 20px;
         width: 20px;
         height: 20px;
@@ -511,7 +511,7 @@ ul,ol{
     margin-bottom: 20px;
 }
     .content-container> .content-lable{
-        background: url(../images/icon-memo.png) no-repeat center center;
+        background: url(../../images/icon-memo.png) no-repeat center center;
         background-size: 20px 20px;
         width: 20px;
         height: 20px;
