--- a/WebContent/community/knowhow/detail-friend.css
+++ b/WebContent/community/knowhow/detail-friend.css
@@ -263,22 +263,27 @@ button {
     .pet-selecting-btn {
         line-height: 50px;
         margin-left: auto;
-        /* margin-right: 20px; */
+        margin-right: 10px;
     }
 
-        .pet-selecting-btn>button {
+        .pet-btn {
             margin-top: 5px;
-            width: 90px;
+            width: 100px;
             height: 35px;
             border-radius: 4px;
             font-weight: bold;
             color: rgb(168, 166, 166);
         }
 
+        .pet-select {
+            background-color: rgb(250, 195, 43);
+            color: white;
+        }
+
     .img-pet {
         display: block;
-        width: 500px;
-        height: 400px;
+        width: 470px;
+        height: 380px;
         border-radius: 10px;
         margin: 40px auto;
     }
