--- a/WebContent/community/knowhow/list.css
+++ b/WebContent/community/knowhow/list.css
@@ -44,6 +44,11 @@ button {
     font-size: 15px;
 }
 
+.text-strong {
+	font-weight: bold;
+	color: rgb(250, 195, 43);
+}
+
 :root {
     --shadow : 0 1px 2px rgba(0,0,0,0.05),0 1px 4px rgba(0,0,0,0.05),0 2px 8px rgba(0,0,0,0.05);
 }
@@ -230,20 +235,34 @@ button {
         display: flex;
         margin: 40px 50px 0px;
     }
-
-    .pet-selecting-btn>button {
-        margin: 5px 3px;
-        width: 80px;
+    
+    .pet-selecting-btn>a {
+    	display: inline-block;
+        margin-top: 5px;
+        width: 100px;
         height: 35px;
+        line-height: 35px;
+        text-align: center;
         border-radius: 4px;
         font-weight: bold;
+        font-size: 13.3px;
+        background-color: rgb(239, 239, 239);
         color: rgb(168, 166, 166);
         cursor: pointer;
     }
-    	
-    	.pet-selecting-btn>.select {
-	    		background-color: rgb(250, 195, 43);
-	    		color: white;
+    
+    	.pet-btn-text {
+	        font-weight: bold;
+	        font-size: 13.3px;
+	        color: rgb(168, 166, 166);
+    	}
+    
+	    .pet-selecting-btn>.select-bg {
+    		background-color: rgb(250, 195, 43);
+	    }
+	    
+	    .select-t {
+    		color: white;
 	    }
     
     .category-btn>select {
@@ -387,7 +406,7 @@ button {
             margin-right: 30px;
         }
 
-        .pager li:nth-child(4) {
+        .pager li:nth-child(5) {
             margin-right: 0;
         }
 
