--- a/WebContent/pet-management/mypet/popup.css
+++ b/WebContent/pet-management/mypet/popup.css
@@ -174,6 +174,7 @@ outline:none;
     font-size:5pt; color:#666;
     line-height: 40px;
 }
+select,
 .add-input-personality,
 .add-container input[type=text],
 .add-container input[type=date]
@@ -188,6 +189,9 @@ outline:none;
     background-color: #f5f5f5;
     padding-left: 10px;
        
+}
+select{
+	width:200px;
 }
 .add-input-personality{
     height: 6rem;
