--- a/WebContent/myhome/reg.css
+++ b/WebContent/myhome/reg.css
@@ -39,6 +39,12 @@ button {
     align-items: center;
 }
 
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .font {
     font-family: 'Nanum Gothic', sans-serif;
 }
@@ -136,7 +142,6 @@ button {
     .logo-title-container>img {
         width: 120px;
         height: auto;
-        margin-top: 7px;
         /* margin-bottom: auto; */
     }
 
@@ -267,15 +272,19 @@ button {
         justify-content: center;
     }
 
-        .button-menu>button {
+        .button-menu>a, .reg-btn {
             width: 150px;
             height: 40px;
             background-color: rgb(207, 204, 204);
             border-radius: 5px;
+            font-size: 14px;
+            font-weight: bold;
+            color: white;
             cursor: pointer;
         }
 
-        .button-menu>button:nth-child(3) {
+        .button-menu>button {
+        	margin-left: 15px;
             background-color: rgb(250, 195, 43);
         }
 
