--- a/WebContent/myhome/list.css
+++ b/WebContent/myhome/list.css
@@ -536,3 +536,88 @@ button {
         margin: 0;
     }
 } 
+
+/*---------------------------------------*/
+/*---------------------------------------*/
+:root {
+    --text-color-basic: #464646 !important;
+    --text-color-light: #E2E2E2 !important;
+    --text-color-strong: #FD9F28 !important;
+    --bg-color-light: #FFFEFD !important;
+    --hover-color-bg: #EFF0F1;
+    --border-color-light: #E4E6E8;
+}
+
+a {
+    cursor: pointer;
+}
+
+.button-2, .button-5 {
+    font-size: 12px !important;
+    cursor: pointer;
+    border: 1px solid var(--text-color-basic);
+    border-radius: 3px;
+    background-color: white;
+    padding: 0;
+    height: 20px;
+    font-weight: 400;
+}
+.button-2 {
+    width: 35px;
+}
+.button-5 {
+    width: 65px;
+}
+button:hover {
+    font-weight: bold;
+}
+
+/*---------------------------------------*/
+
+#diary-comment-sctn {
+    overflow: auto;
+    height: 150px;
+    width: 380px;
+}
+
+.diary-comment {
+    padding: 15px 0 15px 0;
+    border-top: 1px solid var(--border-color-light);
+}
+
+.comment-info, 
+.comment-content {
+    padding-bottom: 10px;
+}
+.comment-info {
+    display: flex;
+    align-items: center;
+}
+.comment-info img {
+    width: 20px;
+    height: 20px;
+    margin-right: 15px;
+}
+.comment-id {
+    cursor: pointer; 
+    font-weight: bold;
+}
+.comment-info span:last-child {
+    font-size: 12px;
+    margin-left: auto;
+    margin-right: 15px;
+}
+.comment-button span {
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.diary-comment-write {
+    padding: 15px 0 15px 0;
+}
+#diary-comment-writing {
+    resize: none;
+}
+.diary-comment-write .button-2 {
+    margin: 10px 0 auto auto;
+}
