--- a/WebContent/community/knowhow/reg.css
+++ b/WebContent/community/knowhow/reg.css
@@ -70,6 +70,13 @@ button {
     font-family: 'Nanum Gothic', sans-serif;
 }
 
+.valid {
+	background-color: rgb(245, 222, 76);
+}
+
+.invalid {
+	background-color: rgb(224, 223, 223);
+}
 :root {
     --shadow : 0 1px 2px rgba(0,0,0,0.05),0 1px 4px rgba(0,0,0,0.05),0 2px 8px rgba(0,0,0,0.05);
 }
