--- a/WebContent/community/knowhow/list.css
+++ b/WebContent/community/knowhow/list.css
@@ -35,6 +35,12 @@ button {
     display: flex;
 }
 
+.non-page {
+	text-align: center;	
+	height: 100px;
+    line-height: 100px;
+}
+
 .align-center {
     align-items: center;
 }
