--- a/WebContent/myhome/list.css
+++ b/WebContent/myhome/list.css
@@ -624,5 +624,6 @@ button:hover {
     resize: none;
 }
 .diary-comment-write .button-2 {
-    margin: 10px 0 auto auto;
+    margin: 10px 0 0 0;
+    display: block;
 }
