Update 일기 삭제 기능

--- a/WebContent/myhome/reg.css
+++ b/WebContent/myhome/reg.css
@@ -219,7 +219,7 @@ button {
                 resize: none; 
             }
 
-            .img-pet {
+            .img-upload-box {
                 position: relative;
                 background-color: rgb(224, 223, 223);
                 width: 270px;
