--- a/WebContent/myhome/list.css
+++ b/WebContent/myhome/list.css
@@ -191,7 +191,7 @@ button {
 
     #main>section{
         display: flex;
-        margin: 25px 105px 0px;
+        margin: 25px 122px 0px 92px;
     }
 
     .member-info {
@@ -265,10 +265,6 @@ button {
             margin: 0 30px 30px 0;
             transition: box-shadow 0.1s ease-in 0s, transform 0.1s ease-in 0s;
             box-shadow: 0 0 6px rgb(206 206 206 / 40%);
-        }
-        
-        .diary-list>div:nth-child(3n) {
-        	margin: 0 0 30px 0;
         }
 
         .diary-list>div:hover {
